@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.torproject.android" android:versionName="0.2.2.22-orbot-alpha-1.0.5.20110503a-dev" android:versionCode="11">
+      package="org.torproject.android" android:versionName="0.2.2.25-orbot-alpha-1.0.5" android:versionCode="11">
        
        <uses-permission android:name="android.permission.INTERNET" />
  		<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
@@ -46,9 +46,8 @@
     	
     	<receiver android:name=".OnBootReceiver">
 			<intent-filter>
-			<action
-			android:name="android.intent.action.BOOT_COMPLETED" />
-			<category android:name="android.intent.category.HOME" />
+				<action	android:name="android.intent.action.BOOT_COMPLETED" />
+				<category android:name="android.intent.category.HOME" />
 			</intent-filter>
 		</receiver>
     	
